k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svgtopng-service
  labels:
    app: svgtopng
spec:
  selector:
    app: svgtopng
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
